external-crates/move/crates/move-compiler/tests/move_check/typing/block_single_expr_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04007]: incompatible types
  ┌─ tests/move_check/typing/block_single_expr_invalid.move:4:21
  │
4 │         ({ 0u64 } : bool);
  │            ----     ^^^^
  │            │        │
  │            │        Invalid type annotation
  │            │        Expected: 'bool'
  │            Given: 'u64'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/block_single_expr_invalid.move:5:22
  │
5 │         ({ &0u64 } : u64);
  │            -----     ^^^
  │            │         │
  │            │         Invalid type annotation
  │            │         Expected: 'u64'
  │            Given: '&u64'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/block_single_expr_invalid.move:6:26
  │
6 │         ({ &mut 0u64 } : ());
  │            ---------     ^^
  │            │             │
  │            │             Invalid type annotation
  │            │             Expected: '()'
  │            Given: '&mut u64'

error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/block_single_expr_invalid.move:7:9
  │
2 │     struct R {}
  │            - To satisfy the constraint, the 'drop' ability would need to be added here
  ·
7 │         ({ R {} } : R);
  │         ^^^^^^^^^^^^^^
  │         │           │
  │         │           The type '0x8675309::M::R' does not have the ability 'drop'
  │         Cannot ignore values without the 'drop' ability. The value must be used

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/block_single_expr_invalid.move:8:37
  │
8 │         ({ (0u64, false, false) } : (u64, bool));
  │            --------------------     ^^^^^^^^^^^
  │            │                        │
  │            │                        Invalid type annotation
  │            │                        Expected expression list of length 2: '(u64, bool)'
  │            Given expression list of length 3: '(u64, bool, bool)'
